# libminc

./: .gitignore  .travis.yml  AGENTS.md  CMakeLists.txt  CTestConfig.cmake  ChangeLog  LIBMINCConfig.cmake.in  Makefile.am  README  README.release  UseLIBMINC.cmake.in  autogen.sh  config.h.cmake  configure.ac
.github/workflows/: cmake.yml
brew/: brew_install.sh  hdf5.rb  netcdf.rb
cmake-modules/: BuildHDF5.cmake  BuildNETCDF.cmake  BuildNIFTI.cmake  FindHDF5.cmake  FindNETCDF.cmake  FindNIFTI.cmake
doc/: README.md
ezminc/: CMakeLists.txt  minc_1_rw.cpp  minc_1_rw.h  minc_1_simple.h  minc_1_simple_rw.cpp  minc_1_simple_rw.h  minc_io_4d_volume.h  minc_io_exceptions.h  minc_io_fixed_vector.h  minc_io_simple_volume.h
ezminc/examples/: CMakeLists.txt  Example_CMakeLists.txt  create_grid_file.cpp  fuzzy_volume_similarity.cpp  trilinear_resample.cpp  volume_avg.cpp  volume_msq_dist.cpp
ezminc/tests/: CMakeLists.txt  ezminc_rw_test.cpp  ezminc_stats.cpp  minc_rw_test2.cpp  minc_rw_test_4d.cpp  minc_rw_test_simple.cpp
libcommon/: ParseArgv.c  minc2_error.c  minc_config.c  minc_error.c  minc_error.h  read_file_names.c  restructure.c  restructure.h  time_stamp.c
libsrc/: ParseArgv.c  ParseArgv.h  dim_conversion.c  hdf_convenience.c  hdf_convenience.h  image_conversion.c  minc.h  minc_basic.h  minc_compat.c  minc_config.c  minc_config.h  minc_convenience.c  minc_error.c  minc_error.h  minc_format_convert.c  minc_format_convert.h  minc_private.h  minc_routines.h  minc_simple.c  minc_useful.h  nd_loop.c  netcdf_convenience.c  read_file_names.c  restructure.c  restructure.h  time_stamp.c  value_conversion.c  voxel_loop.c  voxel_loop.h
libsrc2/: convert.c  datatype.c  dimension.c  free.c  grpattr.c  hyper.c  label.c  m2util.c  minc2.h  minc2_api.h  minc2_defs.h  minc2_error.c  minc2_error.h  minc2_icv.c  minc2_private.h  minc2_structs.h  record.c  slice.c  valid.c  volprops.c  volume.c
nifti/: nifti1_io.c  znzlib.c
testdir/: 4d_dot.mnc  CMakeLists.txt  Makefile.am  create_grid_xfm.c  icv.c  icv_dim.c  icv_dim1.c  icv_fillvalue.c  icv_range.c  icv_vec.c  minc.c  minc2-convert-test.c  minc2-create-test-images-2.c  minc2-create-test-images.c  minc2-datatype-test.c  minc2-dimension-test.c  minc2-float-voxel-test.c  minc2-full-test.c  minc2-grpattr-test.c  minc2-hyper-test-2.c  minc2-hyper-test.c  minc2-label-test.c  minc2-large-attribute.c  minc2-leak-test.c  minc2-m2stats.c  minc2-multires-test.c  minc2-read-metadata.c  minc2-read-rgb.c  minc2-read-variable.c  minc2-record-test.c  minc2-scalar-test.c  minc2-slice-test.c  minc2-testminctools.sh  minc2-valid-test.c  minc2-vector_dimension-test.c  minc2-volprops-test.c  minc_conversion.c  minc_long_attr.c  minc_types.c  mincapi.c  (+9 more)
testdir/vio_xfm_test/: Makefile.am  check-xfm.c  copy-xfm.c  example_volume_io.c  random2  t3_grid_0.mnc  test-xfm.c  test_byte.xfm  test_byte_grid_0.mnc  test_float.xfm  test_float_grid_0.mnc  test_short.xfm  test_short_grid_0.mnc  verify_xfm.c  verify_xfm_table.txt
volume_io/Geometry/: colour.c  colour_def.c  gaussian.c  inverse.c  newton.c  points.c  splines.c  tensors.c  transforms.c
volume_io/Include/: internal_volume_io.h  volume_io.h
volume_io/Include/volume_io/: alloc.h  basic.h  files.h  geom_structs.h  multidim.h  progress.h  string_funcs.h  system_dependent.h  transforms.h  vol_io_prototypes.h  volume.h  volume_cache.h
volume_io/MNI_formats/: gen_xf_io.c  gen_xfs.c  grid_transforms.c  mni_io.c  tag_points.c  thin_plate_spline.c
volume_io/Prog_utils/: alloc.c  alloc_check.c  files.c  print.c  progress.c  string.c  time.c
volume_io/Volumes/: evaluate.c  get_hyperslab.c  input_free.c  input_mgh.c  input_mgh.h  input_mnc.c  input_mnc2.c  input_nifti.c  input_nifti.h  input_nrrd.c  input_volume.c  multidim_arrays.c  output_mnc.c  output_mnc2.c  output_volume.c  set_hyperslab.c  volume_cache.c  volumes.c
volume_io/example/: convert_volume_to_byte.c
