add_executable(trilinear_resample trilinear_resample.cpp)
target_link_libraries(trilinear_resample minc_io)
add_executable(volume_avg volume_avg.cpp)
target_link_libraries(volume_avg minc_io)
add_executable(volume_msq_dist volume_msq_dist.cpp)
target_link_libraries(volume_msq_dist minc_io)
add_executable(create_grid_file create_grid_file.cpp)
target_link_libraries(create_grid_file minc_io)
